--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -15,7 +15,7 @@
     <title>React App</title>
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+      href="https://fonts.googleapis.com/css?family=Lato:300,400,500,700&display=swap"
     />
     <link
       rel="stylesheet"
